# Customer_Support

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docker/: docker-compose.yml
docker/mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-48a56af3-e9b4-43c6-bcab-265af4a4cda2.wt  collection-79467cae-664a-4af1-8a7a-1512bda7496d.wt  collection-9f86a14c-e18f-4383-9b41-0becc7fc39ef.wt  index-10f50782-a8e0-4e8b-9f51-b36d7258a3c2.wt  index-3569c1ae-dd11-48b2-a7a1-9265c9edaf07.wt  index-40b61bec-e213-449c-a429-cf9dc27afbf8.wt  index-8aea5266-e5fb-449c-a68b-ff85c14d4fb0.wt  sizeStorer.wt
docker/mongodb/_tmp/spilldb/: WiredTiger.turtle  WiredTiger.wt
docker/mongodb/diagnostic.data/: metrics.2026-07-04T00-07-36Z-00000
routers/: admin.py  chat.py  health.py
src/: .env  .env.example  main.py  pyproject.toml
src/assets/files/1/: CS_2023.md  IS_2023.md
src/controllers/: BaseController.py  DataController.py  ProccessController.py  ProjectController.py  __init__.py
src/helpers/: config.py
src/models/: BaseDataModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemas/: data_chunk.py  project.py
src/models/enums/: DatabaseEnum.py  ProcessingEnum.py  ResponseEnum.py  __init__.py
src/routers/: admin.py  chat.py  escalation.py  health.py  history.py  profile.py
src/routers/schemas/: data.py
